--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-vanilla-tilt": "^1.0.0",
+    "uuid": "^9.0.0",
+    "vanilla-tilt": "^1.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api-weapons": "json-server --watch ./src/assets/api/db.json --port 3002"
   },
   "eslintConfig": {
     "extends": [
