--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-vanilla-tilt": "^1.0.0",
     "uuid": "^9.0.0",
     "vanilla-tilt": "^1.8.0",
